--- a/index.html
+++ b/index.html
@@ -2,72 +2,120 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/layout-logo.jpg">
+  <link rel="Stylesheet" type="text/css" href="index.css">
+  <title>Pagina de layout</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ 
+ 
 </head>
 <body>
 
-  Features
-  Team
-  Sign In
+  <div>
+    <img src="./images/fylo-logo.png" width="100">  
+    <a href="Features">Features</a>
+    <a href="Team">Team</a>
+    <a href="Sign In">Sign In</a>
+    </div>
 
-  All your files in one secure location, accessible anywhere.
+    <div>
+    <h1>All your files in one secure<br>
+        location, accessible anywhere.
+    </h1>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+    <p>Fylo stores your most important files in one secure location. Access<br>
+      them wherever you need, share and collaborate with friends, family,<br>
+      and co-workers.
+    </p>
+    <a href="Get Started">Get Started</a>
+  </div>  
 
-  Get Started
+  <div>
+    <img src="./images/illustration-1.svg" width="300">
+  </div>
 
-  Stay productive, wherever you are
 
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
 
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
 
-  See how Fylo works
+  <div>
+    <h1>Stay productive, wherever you are</h1>
 
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
+    <p>
+      Never let location be an issue when accessing your files. Fylo has you<br> 
+      covered for all of your file storage needs.
+    </p>
 
-  Kyle Burton
-  Founder & CEO, Huddle
+    <p>
+      Securely share files and folders with friends, family and colleagues for<br> 
+      live collaboration. No email attachments required!
+    </p>
 
-  Get early access today
+    <a href="See how fylo works">See how Fylo works</a>
+    <img src="./images/icon-arrow.svg">
+  </div> 
+  
+  <div>
+    <p>Fylo has improved our team productivity by an order of magnitude. Since 
+    making the switch our team has become a well-oiled collaboration machine.
+    </p>
 
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
+    <img src="./images/avatar-testimonial.jpg" width="100">
 
-  Get Started For Free
+    <h1>Kyle Burton</h1>
+    <p>Founder & CEO, Huddle</p>
+    <img src="./images/illustration-2.svg" width="300">
+  </div>
 
-  Phone: +1-543-123-4567
-  example@fylo.com
 
-  About Us
-  Jobs
-  Press
-  Blog
 
-  Contact Us
-  Terms
-  Privacy
+  <div>
+  <h1>Get early access today</h1>
 
+  <p>It only takes a minute to sign up and our free starter tier is<br>
+     extremely generous. If you have any questions, our support team<br>
+     would be happy to help you.
+  </p>   
+
+  <a href="Get Started for Free">Get Started For Free</a>
+  </div>
+
+
+  <div>
+  
+  <img src="./images/fylo-logo.png" width="100">  
+  <img src="./images/phone.png" width="50">
+  <p>Phone +1-543-123-4567</p>
+  <img src="./images/e-mail.png" width="50">
+  <p>example@fylo.com</p>
+  </div>
+
+  <div>
+  <a href="About Us">About Us</a>
+  <a href="Jobs">Jobs</a>
+  <a href="Press">Press</a>
+  <a href="Blog">Blog</a>
+  </div>
+
+
+  <div>
+  <a href="Contact Us">Contact Us</a>
+  <a href="Terms">Terms</a>
+  <a href="Privacy">Privacy</a>
+  </div>
+
+  <div>
+    <img src="./images/logo-facebook.png" width="50">
+    <img src="./images/logo-twiter.png" width="50">
+    <img src="./images/logo-instagran.png" width="50">
+  </div>
+
+  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
-</body>
+  </body>
 </html>
