classificação no html, novas imgs e input inserido, juntamente com a devidas configurações no css

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ The designs were created to the following widths:
 <body>
 
   <div class="class-cabecalho">
-    <img class="img-cabecalho" src="./images/fylo-logo.png" width="100">  
+    <img class="img-cabecalho" src="./images/fylo-logo_2-removebg-preview.png" width="100">  
     <a class="class-features" href="Features">Features</a>
     <a class="class-team" href="Team">Team</a>
     <a class="class-sign" href="Sign In">Sign In</a>
@@ -116,50 +116,55 @@ The designs were created to the following widths:
 
   <div class="container-3">
     <div>
-      <h1>Get early access today</h1>
-      <p>It only takes a minute to sign up and our free starter tier is<br>
-        extremely generous. If you have any questions, our support team<br>
+      <h1 class="text-get" >Get early access today</h1>
+      <p class="paragrafo-get" >It only takes a minute to sign up and our free starter tier is<br>
+        extremely generous. If you have any questions, our support team <br>
         would be happy to help you.
       </p>
     </div>
-    <div>     
-      <a href="Get Started for Free">Get Started For Free</a>
-    </div>
+    <form class="class-link">     
+      <input class="link-type" type="text" placeholder="Email.exemplo.com">
+      <input class="link-get" type="submit" value="Get Started For Free">
+    </form>
   </div>  
 
 
   <div class="container-4">
     
     <div>
-        <img src="./images/fylo-logo.png" width="100">
-      <div>
-        <img src="./images/icon-phone.svg" width="20">
-        <p>Phone +1-543-123-4567</p>
+        <img class="foto-fylo" src="./images/fylo-logo_2-removebg-preview.png" width="150">
+
+      <div class="class-phone">
+        <img class="foto-phone" src="./images/icon-phone.svg">
+        <p class="text-phone" >Phone +1-543-123-4567</p>
       </div>
 
-      <div>  
-        <img src="./images/icon-email.svg" width="20">
-        <p>example@fylo.com</p>
+      <div class="class-email">  
+        <img class="foto-email" src="./images/icon-email.svg" width="20">
+        <p class="text-phone">example@fylo.com</p>
       </div> 
 
     </div>
 
-    <div>
+    <div class="class-about">
       <a href="About Us">About Us</a>
       <a href="Jobs">Jobs</a>
       <a href="Press">Press</a>
       <a href="Blog">Blog</a>
     </div>
-    <div>
+
+    <div class="class-contact">
       <a href="Contact Us">Contact Us</a>
       <a href="Terms">Terms</a>
       <a href="Privacy">Privacy</a>
     </div>
-    <div>
-      <img src="./images/images-removebg-preview.png" width="50">
-      <img src="./images/twitter-removebg-preview.png" width="45">
-      <img src="./images/instagran-removebg-preview.png" width="50">
+
+    <div class="class-icones">
+      <img class="foto-face" src="./images/images-removebg-preview.png">
+      <img class="foto-twiter" src="./images/twitter-removebg-preview.png">
+      <img class="foto-instagran" src="./images/instagran-removebg-preview.png">
     </div>
+
   </div>  
   
 
